--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,15 @@
     color-scheme: white;
   }
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
