--- a/src/components/product/productForm/formContainer.module.css
+++ b/src/components/product/productForm/formContainer.module.css
@@ -1,9 +1,12 @@
 .formContainer {
-  height: 260px;
+  height: 280px;
   width: 95vw;
   display: flex;
   align-items: center;
   flex-direction: column;
+  border-style: solid;
+  border-color: rgb(212, 212, 212);
+  border-radius: 6px; 
 }
 
 .formTitleBox {
