--- a/src/components/Counter/counter.module.css
+++ b/src/components/Counter/counter.module.css
@@ -1,10 +1,27 @@
 .counterContainer {
   width: 25vw;
-  height: 15vw;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   border-style: solid;
   border-color: rgb(212, 212, 212);
   border-radius: 6px; 
+}
+
+.counterContainer > button{
+  background-color: transparent;
+  font-size: 15px;
+  margin: 0;
+  padding: 0; 
+  border-style: none;
+  width: 10px;
+}
+.counterContainer > input{
+  font-size: 18px;
+  margin: 0;
+  padding: 0; 
+  border-style: none;
+  width: 30px;
+  text-align: center;
 }
