--- a/src/components/product/productForm/priceTray/counter.module.css
+++ b/src/components/product/productForm/priceTray/counter.module.css
@@ -1,3 +1,48 @@
 .trayContainer {
   display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.trayBuyButton {
+  display: flex;
+  gap: 5px;
+}
+
+.btnBox {
+  max-width: 60vw;
+  align-items: center;
+  justify-content: center;
+}
+
+.btnBox > p {
+  color: #59C00B;
+  margin: 0;
+  padding: 0;
+  font-size: 11px;
+  margin-bottom: 4px;
+}
+
+.trayTitleBox {
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.trayTitleBox > h1 {
+  text-align: center;
+  color: #004C98;
+  font-size: 30px;
+  margin: 0;
+  padding: 0;
+}
+.trayTitleBox > p {
+  text-align: center;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
 }
