--- a/src/components/NavButton/navButton.module.css
+++ b/src/components/NavButton/navButton.module.css
@@ -14,3 +14,25 @@
   border: none;
   background-color: transparent;
 }
+
+@media(min-width: 1024px){
+  .navButtonContainer{
+  max-width: 19vw;
+   max-height: 6vw;
+   background-color: #f1f1f1;
+   border-radius: 2rem;
+   border-style: solid;
+   border-color: #004C98;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+  }
+
+  .navButtonContainer > button {
+    font-size: 20px;
+    width: 35vw;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+  }
+}
