--- a/src/components/product/productDelivery/components/DeliveryTable/deliveryTable.module.css
+++ b/src/components/product/productDelivery/components/DeliveryTable/deliveryTable.module.css
@@ -37,3 +37,10 @@ background-color: #faf8f8;
 .thFrete {
   width: 33vw;
 }
+
+
+@media(min-width: 1024px){
+  .deliveryTableContainer{
+    max-width: 30vw;
+  }
+}
