--- a/src/components/product/productDelivery/productDelivery.module.css
+++ b/src/components/product/productDelivery/productDelivery.module.css
@@ -44,3 +44,20 @@
   margin: 0;
   padding: 0;
 }
+
+@media(min-width: 1024px){
+  .deliveryContainer {
+    max-width: 40vw;
+    gap: 5px;
+  }
+
+  .deliveryInput > button {
+    max-width: 30vw;
+  }
+  .deliveryInput  > input {
+    max-width: 25vw;
+  }
+  .deliveryInput {
+    max-width: 25vw;
+  }
+}
