--- a/src/components/product/productDescription/NavDescriptionOptions/navDescriptionOptions.module.css
+++ b/src/components/product/productDescription/NavDescriptionOptions/navDescriptionOptions.module.css
@@ -11,3 +11,13 @@
 .hiddenNavOptionsContainer{
   display: none;
 }
+
+@media (min-width: 1024px){
+  .showNavOptionsContainer {
+    display: flex;
+    flex-direction: row;
+    width: 90vw;
+    height: 200px;
+    left: 0;
+  }
+}
