--- a/src/components/product/productDetail.module.css
+++ b/src/components/product/productDetail.module.css
@@ -5,12 +5,17 @@
   align-items: center;
 }
 
-/* @media (max-width:768px){
-  .detailContainer {
+@media (min-width:768px){
+  .container {
+    width: 100vw;
     display: flex;
-    justify-content: space-around;
-    width: 90vw;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
-} */
+  
+  .detailContainer {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100vw;
+  }
+}
