--- a/src/components/product/productForm/formContainer.module.css
+++ b/src/components/product/productForm/formContainer.module.css
@@ -17,10 +17,11 @@
 }
 
 .formTitleBox > h1 {
+  text-align: center;
+  margin-inline: 10px;
   font-weight: normal;
   font-size: 24px;
   color: #687175;
-  margin: 0px;
   padding: 0;
   margin-top: 5vw;
 }
@@ -33,10 +34,38 @@
 }
 
 .formContainer > hr {
-  background-color: #dcdcdc;
   height: 1px;
   border-style: none;
   width: 90vw;
   align-self: center;
-  margin: 5vw;
+  margin: 5%;
+}
+
+@media (min-width: 1024px) {
+  .formContainer {
+    max-width: 40vw;
+    max-height: 650px;
+    margin: 0;
+  }
+
+  .formTitleBox {
+    margin: 0;
+    height: 300px;
+    margin-bottom: 20px;
+  }
+  .formContainer > hr {
+    width: 45vw;
+    height: 20px;
+  }
+  .formTitleBox > h1 {
+    color: #687175;
+    text-align: center;
+    margin-inline: 10px;
+    font-weight: normal;
+    font-size: 24px;
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+  }
+  
 }
