--- a/src/components/product/productForm/priceTray/counter.module.css
+++ b/src/components/product/productForm/priceTray/counter.module.css
@@ -46,3 +46,19 @@
   margin: 0;
   padding: 0;
 }
+
+@media(min-width:768px){
+  .trayContainer {
+    max-width: 80%;
+    max-height: 80%;
+  }
+
+  .btnBox {
+    max-width: 20vw;
+
+  }
+  .trayBuyButton {
+    display: flex;
+    gap: 5px;
+  }
+}
