--- a/src/components/product/productGallery/components/thumbListSelector/thumbListSelector.module.css
+++ b/src/components/product/productGallery/components/thumbListSelector/thumbListSelector.module.css
@@ -1,5 +1,5 @@
 .thumbListContainer {
-display: flex;
+ display: flex;
  width: 95vw;
  height: 120px;
  justify-content: space-around;
@@ -27,12 +27,11 @@ display: flex;
 
 } 
 
-/* @media (max-width: 768px) {
+@media (min-width: 768px) {
 
   .thumbListContainer {
-    width: 10%;
-    height: 600px;
-    justify-content: space-around;
+    width: 8vw;
+    min-height: 45vw;
     display: flex;
     flex-direction: column;
   }
@@ -40,12 +39,15 @@ display: flex;
   
   .thumbListContainer ul {
     overflow: scroll;
+    display: flex;
+    max-width: 90%;
+    max-height: 100%;
+    flex-direction: column;
     list-style: none;
-    height: 560px;
-    padding: 0;
-    margin: 0;
+    height: 90%;
+    padding: 5px;
+    gap: 5px
   }
-  
 
 
-} */
+}
