--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,3 +6,9 @@
   padding: 6rem;
   min-height: 100vh;
 }
+
+.productPageContent {
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
