--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
 }
 
@@ -11,4 +9,5 @@
   flex: 1;
   align-items: center;
   justify-content: center;
+  padding-left: 15px;
 }
