--- a/src/components/Button/classes.module.css
+++ b/src/components/Button/classes.module.css
@@ -15,7 +15,12 @@
     margin: 0;
     background-color: #004C98;
     height: 50px;
-    width: 86.5vw;
+    width: 85vw;
     border-radius: 8px;
     border-style: none;
+}
+
+@media(min-width: 460px){
+  .btnContainer { max-width: 300px}
+  .btnContainerLarge { max-width: 400px}
 }
