--- a/src/components/Counter/counter.module.css
+++ b/src/components/Counter/counter.module.css
@@ -1,5 +1,7 @@
 .counterContainer {
-  width: 25vw;
+  width: 24vw;
+  min-width: 80px;
+  max-width: 85px;
   height: 50px;
   display: flex;
   align-items: center;
@@ -24,4 +26,7 @@
   border-style: none;
   width: 30px;
   text-align: center;
+}
+
+@media(min-width: 600px){
 }
