--- a/src/components/product/productForm/priceTray/counter.module.css
+++ b/src/components/product/productForm/priceTray/counter.module.css
@@ -8,9 +8,11 @@
   margin-bottom: 20px;
 }
 
-.trayBuyButton {
+.trayBuyContainer {
+  height: 90px;
   display: flex;
-  gap: 5px;
+  gap: 10px;
+  justify-content: center;
 }
 
 .btnBox {
@@ -45,4 +47,19 @@
   font-size: 12px;
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: 700px){
+.trayBuyContainer {
+  display: flex;
+  justify-content: center;
+}
+}
+
+@media (max-width: 330px){
+  .trayBuyContainer{ 
+  flex-direction: column;
+  align-items: center;
+  height: 140px;
+  }
 }
