feat: Fixing responsive layout for 820px+ width

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  width: 100vw;
+  flex: 1;
 }
 
 .productPageContent {
-  flex: 1;
   align-items: center;
   justify-content: center;
 }
