--- a/src/components/product/productDetail.module.css
+++ b/src/components/product/productDetail.module.css
@@ -1,5 +1,9 @@
 .productDetailContainer {
  width: 100vw;
+ display: flex;
+ flex-direction: column;
+ /* justify-content: center;
+ align-items: center; */
 }
 
 .detailContainer {
