--- a/src/components/NavButton/navButton.module.css
+++ b/src/components/NavButton/navButton.module.css
@@ -1,6 +1,8 @@
 .navButtonContainer {
   width: 28vw;
+
   height: 18vw;
+  
   background-color: #f1f1f1;
   border-radius: 8px;
   border-style: solid;
@@ -14,3 +16,16 @@
   border: none;
   background-color: transparent;
 }
+
+@media(min-width: 820px){
+  .navButtonContainer{
+    max-width: 260px;
+    max-height: 60px;
+  }
+}
+/* @media(min-width: 320px){
+  .navButtonContainer{
+    max-height: 60px;
+    max-width: 90px;
+  } */
+/* } */
