--- a/src/components/product/productDescription/NavDescriptionOptions/navDescriptionOptions.module.css
+++ b/src/components/product/productDescription/NavDescriptionOptions/navDescriptionOptions.module.css
@@ -6,8 +6,35 @@
   flex-direction: column;
   gap: 10px;
   height: 330px;
+  width: 300px;
 }
 
 .hiddenNavOptionsContainer{
   display: none;
+}
+
+@media(min-width: 820px){
+  .showNavOptionsContainer {
+    position: absolute;
+    flex-direction: row;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .hiddenNavOptionsContainer {
+    position: absolute;
+    flex-direction: row;
+    left: 0;
+    top: 0;
+    gap: 10px;
+    width: 100vw;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
